[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gate-schema"
version = "0.1.0"
description = "JSON Schema validation for Maelstrom Gate artifacts — tools, policies, envelopes, filter results."
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "jsonschema>=4.17.0",
    "gate-keeper>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
